--- a/styles/index.css
+++ b/styles/index.css
@@ -105,6 +105,11 @@ body{
 	height: auto;
 	top: 66px;
 	left: 0px;
+	image-rendering: -moz-crisp-edges;
+    image-rendering: -o-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    -ms-interpolation-mode: nearest-neighbor;
+    image-rendering: pixelated;
 }
 
 #depthMap{
@@ -113,7 +118,7 @@ body{
 	height: auto;
 	top: 66px;
 	left: 0px;
-	visibility: hidden;
+	opacity: 0.2;
 }
 
 #blockMap{
@@ -122,7 +127,7 @@ body{
 	height: auto;
 	top: 66px;
 	left: 0px;
-	visibility: hidden;
+	opacity: 0.3;
 }
 
 
@@ -163,7 +168,7 @@ body{
 
 .balletBar{
 	height: 10px;
-	background: white;
+	background: #4a4442;
 	width: 100vw;
 	margin-top: 50px;
 	z-index: 2;
