--- a/styles/index.css
+++ b/styles/index.css
@@ -40,7 +40,7 @@ body{
 	display: inline-block;
 	width: 100%;
 	height: 100vh;
-	background-color: rgba(68, 68, 68, 0.8);
+	background-color: rgba(68, 68, 68, 0.85);
 	text-align: center;
 }
 
@@ -105,11 +105,20 @@ body{
 	height: auto;
 	top: 66px;
 	left: 0px;
-	image-rendering: -moz-crisp-edges;
+	/*image-rendering: -moz-crisp-edges;
     image-rendering: -o-crisp-edges;
     image-rendering: -webkit-optimize-contrast;
     -ms-interpolation-mode: nearest-neighbor;
-    image-rendering: pixelated;
+    image-rendering: pixelated;*/
+}
+
+.homeMap{
+	top: 0px;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    left: 0px;
+    z-index: 100;
 }
 
 #depthMap{
@@ -118,7 +127,7 @@ body{
 	height: auto;
 	top: 66px;
 	left: 0px;
-	opacity: 0.2;
+	opacity: 0;
 }
 
 #blockMap{
@@ -174,3 +183,26 @@ body{
 	z-index: 2;
 }
 
+.dialogBox
+{
+	z-index: 1;
+	display: block;
+    background: #eeffe6;
+    padding: 8px;
+    border-radius: 5px;
+    margin: auto;
+    margin-top: 50px;
+    font-family: 'VT323', monospace;
+    font-size: 18pt;
+    max-width: 60%;
+    letter-spacing: .1rem;
+    text-align: left;
+}
+
+.entryDoor{
+	position: absolute;
+	right: 0px;
+	top: 25%;
+	height: 50%;
+	z-index: 99;
+}
